FMWK-500 Validations (#13)
* Adding a validation layer, first iteration

* Rename type variables, distinguish between PartType and expType more clearly

* Align exceptions and string formatting

* Bin operand comparison cleanup

* Align comments

* Remove solved TODOs, clear existing TODOs

* Add a TODO, list requires additional work on being able to compare as other types

* Add support for boolean operand when comparing with CDTs, cover with tests for lists

* Add a TODO, disable metadata testing